# config-linux-computer

./: .vimrc  .zshrc  README.md  gromit-mpx.cfg  kiro_settings.jsonc  multiple_git_setup.md  pyproject.toml  setup.md  vscode_settings.jsonc
