[project]
name = "config-linux-computer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]

[dependency-groups]
dev = [
]

[tool.uv]
default-groups = "all"


[tool.ruff]
target-version = "py314"
line-length = 120
lint.select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "B",   # flake8-bugbear
    "I",   # isort
    "N",   # pep8-naming
    "ERA", # eradicate (commented-out code)
    "UP",  # pyupgrade (modernize syntax for py314)
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
    "T20", # flake8-print (catch leftover print statements)
    "S",   # flake8-bandit (security)
    "PT",  # flake8-pytest-style
]

lint.per-file-ignores."scripts/**" = [
    "T20",
] # CLI scripts use print() intentionally
